remove img folder

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- Begin page content -->
 <header class="header py-3 bg-white ">
     <div class="container px-5">
-        <img src="img/uplead_cse_logo.png" class="img-fluid col-md-4 offset-md-4" alt="Uplead CSE">
+        <img src="uplead_cse_logo.png" class="img-fluid col-md-4 offset-md-4" alt="Uplead CSE">
     </div>
 </header>
 
