change emil address

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <footer class="footer mt-auto py-3 bg-white">
     <div class="container text-center" style="font-size: 1.25rem">
-        <a href="mailto:contact@upleadcse.fr" style="text-decoration:none;color: #143066">contact@uplead.cse</a>
+        <a href="mailto:contact@upleadcse.fr" style="text-decoration:none;color: #143066">contact@upleadcse.fr</a>
     </div>
 </footer>
 
