--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="description" content="">
 
     <title>Uplead CSE</title>
+
+    <meta property="og:locale" content="fr_FR"/>
+    <meta property="og:title"
+          content="Uplead CSE : L'expertise RH au service de votre CSE !"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.upleadcse.fr/"/>
+    <meta property="og:image" content="https://www.upleadcse.fr/img/uplead_cse_logo.png"/>
+    <meta property="og:image:width" content="1980"/>
+    <meta property="og:image:height" content="507"/>
+    <meta property="og:site_name"
+          content="Uplead CSE : L'expertise RH au service de votre CSE !"/>
+    <meta property="og:description"
+          content="Nos juristes et experts RH vous accompagnent dans votre mandat d’élu."/>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +31,47 @@
         .lato-font {
             font-family: 'Lato', sans-serif;
         }
+
+        h1 {
+            margin-top: 30px;
+            margin-bottom: 20px;
+            color: #fff;
+            font-size: 2rem;
+        }
+
+        p {
+            color: #fff;
+            font-size: 1.25rem;
+            font-weight: 300;
+            margin-top: 0;
+            margin-bottom: 10px;
+        }
+
+        p.meetings {
+            margin-top: 30px;
+            font-weight: 400;
+            font-size: 1.5rem
+        }
+
+        p.legend {
+            color: #b8cfe5;
+            font-weight: 400;
+            font-size: 1rem
+        }
+
+        p.construction {
+            color: #7aa0cc;
+            font-weight: 400;
+            font-size: 0.75rem
+        }
     </style>
 
 
     <!-- Custom styles for this template -->
     <link href="sticky-footer.css" rel="stylesheet">
 </head>
-<body class="d-flex flex-column h-100 lato-font "
-      style="background: linear-gradient(333deg, rgba(20,48,102,1) 0%, rgba(41,150,204,1) 100%);">
+<body class=" lato-font "
+>
 
 <!-- Begin page content -->
 <header class="header py-3 bg-white ">
@@ -33,20 +80,59 @@
     </div>
 </header>
 
-<div class="container h-100">
-    <div class="d-flex justify-content-center align-items-center h-100">
-        <div class="text-center">
-            <div class="fa-6x">
-                <i class="fa-solid fa-person-digging" style="color: #7aa0cc"></i>
+<div class=" h-100 " style="background: linear-gradient(333deg, rgba(20,48,102,1) 0%, rgba(41,150,204,1) 100%);">
+    <div class="container h-100">
+        <div class="row pt-5 h-100">
+            <div class="col-sm-12 col-md-6 text-center">
+                <h1>COACHING</h1>
+                <p>Préparez vos réunions CSE</p>
+                <p>Maîtrisez votre sujet</p>
+                <p>Apprenez à négocier</p>
+                <p>Adoptez la bonne posture</p>
+                <p class="meetings">Pour des réunions CSE efficaces</p>
+                <div class="row my-4 pt-4 pb-2">
+                    <div class="col-6 offset-3">
+                        <img src="coaching.png" class="img-fluid" alt="coaching">
+                    </div>
+                </div>
+                <p class="legend mb-5">Accompagnement individuel ou collectif</p>
             </div>
-            <p style="color: #7aa0cc; font-size: 1rem">Site en construction</p>
+            <div class="col-sm-12 col-md-6 text-center">
+                <h1>FORMATION ECONOMIQUE</h1>
+                <p>Missions économiques du CSE</p>
+                <p>Harcèlement moral harcèlement sexuel</p>
+                <p>Référent handicap</p>
+                <p>BDESE</p>
+                <p>Droit du travail</p>
+                <p>Règlement intérieur du CSE </p>
+                <h1 class="mt-5">FORMATION SANTE SECURITE</h1>
+                <div class="row my-4 pt-4 pb-2">
+                    <div class="col-6 offset-3">
+                        <img src="formation.png" class="img-fluid" alt="formation">
+                    </div>
+                </div>
+                <p class=" legend mb-5">Formation en inter ou intra entreprise</p>
+            </div>
         </div>
     </div>
 </div>
 
 <footer class="footer mt-auto py-3 bg-white">
     <div class="container text-center" style="font-size: 1.25rem">
-        <a href="mailto:contact@upleadcse.fr" style="text-decoration:none;color: #143066">contact@upleadcse.fr</a>
+        <p style="color: #143066 !important;">Pour plus d'information, contacter Olivier&nbsp;ANDRE</p>
+        <div class="my-2">
+            <a href="tel:+33749591111" style="text-decoration:none;color: #143066;">07 49 59 11 11</a> - <a
+                href="mailto:contact@upleadcse.fr" style="text-decoration:none;color: #143066;">contact@upleadcse.fr</a>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-4 offset-md-4">
+                <hr>
+                <p class="construction mt-1 mb-1">
+                    <i class="fa-solid fa-person-digging mr-3"></i>
+                    <span class="ml-2">SITE EN CONSTRUCTION</span>
+                </p>
+            </div>
+        </div>
     </div>
 </footer>
 
